; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_config.c_git_config_delete_multivar.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_config.c_git_config_delete_multivar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 (%struct.TYPE_4__*, i8*, i8*)* }

@BACKEND_USE_DELETE = common dso_local global i32 0, align 4
@GIT_ENOTFOUND = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_config_delete_multivar(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = load i32, i32* @BACKEND_USE_DELETE, align 4
  %12 = call i64 @get_backend_for_use(%struct.TYPE_4__** %8, i32* %9, i8* %10, i32 %11)
  %13 = icmp slt i64 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %3
  %15 = load i32, i32* @GIT_ENOTFOUND, align 4
  store i32 %15, i32* %4, align 4
  br label %24

16:                                               ; preds = %3
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = load i32 (%struct.TYPE_4__*, i8*, i8*)*, i32 (%struct.TYPE_4__*, i8*, i8*)** %18, align 8
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %21 = load i8*, i8** %6, align 8
  %22 = load i8*, i8** %7, align 8
  %23 = call i32 %19(%struct.TYPE_4__* %20, i8* %21, i8* %22)
  store i32 %23, i32* %4, align 4
  br label %24

24:                                               ; preds = %16, %14
  %25 = load i32, i32* %4, align 4
  ret i32 %25
}

declare dso_local i64 @get_backend_for_use(%struct.TYPE_4__**, i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
